--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
   min-height: 100vh;
 
   transition-property: background-color;
-  transition-duration: 0.3s;
+  transition-duration: 0.1s;
   transition-timing-function: ease-in-out;
 }
 
@@ -56,7 +56,7 @@ body {
   color: var(--head_txt);
 
   transition-property: color;
-  transition-duration: 0.3s;
+  transition-duration: 0.1s;
   transition-timing-function: ease-in-out;
 }
 
@@ -66,12 +66,12 @@ body {
   cursor: pointer;
 
   transition-property: color;
-  transition-duration: 0.3s;
+  transition-duration: 0.1s;
   transition-timing-function: ease-in-out;
 }
 
 .container {
-  width: 400px;
+  width: 500px;
   display: flex;
   flex-direction: column;
   padding: 20px;
@@ -83,7 +83,7 @@ body {
   color: var(--head_txt);
 
   transition-property: color;
-  transition-duration: 0.3s;
+  transition-duration: 0.1s;
   transition-timing-function: ease-in-out;
 }
 
@@ -136,7 +136,7 @@ body {
   position: relative;
 
   transition-property: background-color;
-  transition-duration: 0.3s;
+  transition-duration: 0.1s;
   transition-timing-function: ease-in-out;
 }
 
@@ -150,26 +150,34 @@ body {
   transform: translateX(0);
 
   transition-property: left, transform, background-color;
-  transition-duration: 0.3s;
+  transition-duration: 0.1s;
   transition-timing-function: ease-in-out;
 }
 
 .screen {
+  height: 92px;
   background-color: var(--screen_bg);
   padding: 20px 20px 10px 20px;
   margin: 30px 0 20px;
   border-radius: 7px;
-  display: flex;
-  justify-content: flex-end;
+  text-align: end;
   color: var(--head_txt);
 
   transition-property: background-color, color;
-  transition-duration: 0.3s;
+  transition-duration: 0.1s;
   transition-timing-function: ease-in-out;
 }
 
-.screen span {
-  font-size: 1.3em;
+.last-val {
+  font-size: 0.5em;
+  opacity: 0.4;
+  margin-bottom: 5px;
+  display: none;
+}
+
+.new-val {
+  font-size: 1em;
+  display: block;
 }
 
 .btns {
@@ -183,22 +191,29 @@ body {
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
 
   transition-property: background-color;
-  transition-duration: 0.3s;
+  transition-duration: 0.1s;
   transition-timing-function: ease-in-out;
 }
 
 .btn {
+  box-sizing: content-box;
   background-color: var(--key_bg);
   color: var(--btns_txt);
-  border-bottom: 3px solid var(--key_shadow);
+  box-shadow: 0 4px var(--key_shadow);
   font-size: 0.8em;
   border-radius: 7px;
-  padding: 10px 10px 5px 10px;
+  padding-top: 10px;
   text-align: center;
+  cursor: pointer;
 
-  transition-property: border-color, background-color, color;
-  transition-duration: 0.3s;
+  transition-property: background-color, color;
+  transition-duration: 0.1s;
   transition-timing-function: ease-in-out;
+}
+
+.btn:active {
+  box-shadow: 0 0 var(--key_shadow);
+  transform: translateY(4px);
 }
 
 .btn-del {
@@ -206,11 +221,16 @@ body {
   padding: 15px;
   background-color: var(--dell_bg);
   color: var(--dell_res_txt);
-  border-bottom: 3px solid var(--dell_shadow);
+  box-shadow: 0 4px var(--dell_shadow);
 
-  transition-property: border-color, background-color, color;
-  transition-duration: 0.3s;
+  transition-property: background-color, color;
+  transition-duration: 0.1s;
   transition-timing-function: ease-in-out;
+}
+
+.btn-del:active {
+  box-shadow: 0 0 var(--key_shadow);
+  transform: translateY(4px);
 }
 
 .btn-reset {
@@ -218,21 +238,31 @@ body {
   padding: 15px;
   background-color: var(--dell_bg);
   color: var(--dell_res_txt);
-  border-bottom: 3px solid var(--dell_shadow);
+  box-shadow: 0 4px var(--dell_shadow);
   grid-column: 1/3;
 
   transition-property: border-color, background-color, color;
-  transition-duration: 0.3s;
+  transition-duration: 0.1s;
   transition-timing-function: ease-in-out;
+}
+
+.btn-reset:active {
+  box-shadow: 0 0 var(--dell_shadow);
+  transform: translateY(4px);
 }
 
 .btn-equal {
   background-color: var(--equal_bg);
   color: var(--equal_txt);
-  border-bottom: 3px solid var(--equal_shadow);
+  box-shadow: 0 4px var(--equal_shadow);
   grid-column: 3/5;
 
   transition-property: border-color, background-color, color;
-  transition-duration: 0.3s;
+  transition-duration: 0.1s;
   transition-timing-function: ease-in-out;
+}
+
+.btn-equal:active {
+  box-shadow: 0 0 var(--equal_shadow);
+  transform: translateY(4px);
 }
