--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body {
 .click1,
 .click2,
 .click3 {
-  background-color: white;
+  background-color: var(--equal_bg);
   opacity: 0;
   height: 15px;
   width: 15px;
@@ -146,7 +146,7 @@ body {
 .click1:hover,
 .click2:hover,
 .click3:hover {
-  opacity: 0.2;
+  opacity: 0.3;
 }
 
 .circle {
